golang实现beego api的验证码登录及自动化Api文档，及单元测试golang package
